--- a/dashboard.html
+++ b/dashboard.html
@@ -61,7 +61,7 @@
                             </div>
                             <div class="d-inline-block ml-3">
                                 <div class="stat">
-                                    <img src="../assets/done.png" height="40" alt="" srcset="">
+                                    <img src="/assets/done.png" height="40" alt="" srcset="">
                                 </div>
                             </div>
                         </div>
