--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-color">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">
-                <img width="30" height="30" class="d-inline-block align-top" src="../assets/logo.png" alt="">
+                <img width="30" height="30" class="d-inline-block align-top" src="./assets/logo.png" alt="">
                 To Do
             </a>
 
@@ -44,7 +44,7 @@
                             </div>
                             <div class="d-inline-block ml-3">
                                 <div class="stat">
-                                    <img src="../assets/list.png" height="40" alt="" srcset="">
+                                    <img src="./assets/list.png" height="40" alt="" srcset="">
                                 </div>
                             </div>
                         </div>
@@ -61,7 +61,7 @@
                             </div>
                             <div class="d-inline-block ml-3">
                                 <div class="stat">
-                                    <img src="/assets/done.png" height="40" alt="" srcset="">
+                                    <img src="./assets/done.png" height="40" alt="" srcset="">
                                 </div>
                             </div>
                         </div>
@@ -79,7 +79,7 @@
                             </div>
                             <div class="d-inline-block ml-3">
                                 <div class="stat">
-                                    <img src="../assets/notification.png" height="40" alt="" srcset="">
+                                    <img src="./assets/notification.png" height="40" alt="" srcset="">
                                 </div>
                             </div>
                         </div>
@@ -98,7 +98,7 @@
                             </div>
                             <div class="d-inline-block ml-3">
                                 <div class="stat">
-                                    <img src="../assets/list.png" height="40" alt="" srcset="">
+                                    <img src="./assets/list.png" height="40" alt="" srcset="">
                                 </div>
                             </div>
                         </div>
@@ -162,7 +162,7 @@
                 <div class="modal-body ">
                     <div class="row py-3">
                         <div class="col-12 my-3 d-flex justify-content-center py-1">
-                            <img height="50" src="../assets/stop.png" alt="">
+                            <img height="50" src="./assets/stop.png" alt="">
                         </div>
                         <div class="col-12 d-flex justify-content-center">
                             <h3>Are you sure ?</h3>
@@ -192,7 +192,7 @@
                 <div class="modal-body ">
                     <div class="row py-3">
                         <div class="col-12 my-3 d-flex justify-content-center py-1">
-                            <img height="50" src="../assets/done.png" alt="">
+                            <img height="50" src="./assets/done.png" alt="">
                         </div>
                         <div class="col-12 d-flex justify-content-center">
                             <h3>Congrats !!</h3>
@@ -220,7 +220,7 @@
     integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0"
     crossorigin="anonymous"></script>
 
-<script src="../scripts/home.js"></script>
+<script src="./scripts/home.js"></script>
 
 
 
