--- a/dashboard.html
+++ b/dashboard.html
@@ -32,7 +32,7 @@
         <div class="spinner-border text-primary" role="status">
         </div>
     </div>
-    <div class="container">
+    <div class="container" id="home" hidden="true">
         <div class="row mt-3">
             <div class="col-12 col-sm-6 col-xxl-3 col-lg-3 d-flex">
                 <div class="card flex-fill">
